# euclidon

./: .gitignore  Cargo.toml  README.md  changelog.md
assets/euclidon/templates/: index.html.tera  login.html.tera
assets/euclidon/templates/page/: view.html.tera
assets/scripts/: simple-page-editor.js
assets/styles/page/: edit.css
assets/templates/: index.html.tera
assets/templates/page/: base.html.tera  edit.html.tera  not-found.html.tera  view.html.tera
migrations/2025-01-31-204755_create_table_users/: up.sql
migrations/2025-02-01-070820_create_table_user_sessions/: down.sql  up.sql
migrations/2025-02-02-161336_create_table_contents/: up.sql
migrations/2025-02-02-161720_create_table_revisions/: down.sql  up.sql
migrations/2025-02-02-162524_create_table_pages/: down.sql  up.sql
migrations/2025-02-02-163329_alter_table_revisions_add_constraint_page_id_fkey/: down.sql  up.sql
src/: app.rs  db.rs  error.rs  lib.rs  main.rs  output.rs  render.rs  router.rs  schema.rs
src/asset/: error.rs  loc.rs  mod.rs
src/auth/: hash.rs  mod.rs  password.rs
src/controllers/: assets.rs  mod.rs  root.rs
src/controllers/wiki/: login.rs  page.rs
src/model/: mod.rs  page.rs  user.rs
src/tasks/: db.rs  mod.rs
