[package]
name = "euclidon"
version = "0.1.0"

authors = ["Ahraman <ahraman.programming@gmail.com>"]
description = "A wiki software oriented towards mathematical and scientific encyclopediae."
license = "MIT OR Apache-2.0"

edition = "2021"
rust-version = "1.84.0"

[dependencies]
# general
thiserror = "2.0.11"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
chrono = { version = "0.4.39", default-features = false, features = [
    "std",
    "clock",
    "serde",
] }

# config
dotenvy = "0.15.7"

# runtime
tokio = { version = "1.43.0", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "net",
    "fs",
] }

# net & web
axum = { version = "0.8.1", default-features = false, features = [
    "macros",
    "tokio",
    "http1",
    "http2",
    "multipart",
    "query",
    "form",
] }
axum-extra = { version = "0.10.0", default-features = false, features = [
    "cookie",
] }
tera = { version = "1.20.0", default-features = false, features = [
    "chrono",
    "urlencode",
] }

# database
diesel = { version = "2.2.6", default-features = false, features = [
    "with-deprecated",
    "chrono",
    "postgres",
    "r2d2",
] }

# hashing & crypto
base64 = "0.22.1"
sha3 = "0.10.8"
hmac = "0.12.1"
pbkdf2 = { version = "0.12.2", default-features = false }

# randomization
rand_core = { version = "0.9.0", features = ["os_rng"] }
rand_chacha = "0.9.0"
